kuber-homeworks-main/1.5/src/deployment_frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: fe
spec:
  replicas: 3
  selector:
    matchLabels:
      app: fe
  template:
    metadata:
      labels:
        app: fe
    spec:
      containers:
      - name: nginx
        image: nginx:1.19.1
        ports:
        - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: fe-svc
spec:
  ports:
    - name: web-f
      port: 80
  selector:
    app: fe
