kuber-homeworks-main/1.5/src/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host:
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: fe-svc
            port:
              number: 80
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: be-svc
            port:
              number: 80
